--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,6 @@ FodyWeavers.xsd
 김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
 김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/v17/.suo
 *.db
+김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
+*.vsidx
+김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
