--- a/.gitignore
+++ b/.gitignore
@@ -394,6 +394,9 @@ FodyWeavers.xsd
 *.msm
 *.msp
 
+# obj file exceotion directory
+! /임윤수(기획)/objfiles
+
 # JetBrains Rider
 *.sln.iml
 김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
