--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ Generated\ Files/
 
 # Visual Studio packagr directory
 /김동재(서버)/Asio server 연습/server/packages
+/김동재(서버)/Asio server 연습/client/packages
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
