client 프로젝트에 리소스 파일 추가
chess3.png 리소스 추가

--- a/김동재(서버)/Asio server 연습/client/ASIO_GAME_CLIENT/ASIO_GAME_CLIENT.vcxproj
+++ b/김동재(서버)/Asio server 연습/client/ASIO_GAME_CLIENT/ASIO_GAME_CLIENT.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="chess2.png" />
+    <Image Include="chess3.png" />
     <Image Include="chessmap.bmp" />
   </ItemGroup>
   <ItemGroup>
