--- a/김동재(서버)/Asio server 연습/client/ASIO_GAME_CLIENT/ASIO_GAME_CLIENT.vcxproj.filters
+++ b/김동재(서버)/Asio server 연습/client/ASIO_GAME_CLIENT/ASIO_GAME_CLIENT.vcxproj.filters
@@ -26,6 +26,9 @@
     <Image Include="chessmap.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="chess3.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Font Include="cour.ttf">
