--- a/양정우(클라이언트)/DirectX12/MyDXProj/MyDXProject2/MyDXProject2.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/MyDXProj/MyDXProject2/MyDXProject2.vcxproj.filters
@@ -104,4 +104,7 @@
     <FxCompile Include="Light.hlsl" />
     <FxCompile Include="Shaders.hlsl" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
