--- a/양정우(클라이언트)/DirectX12/MyDXProj/MyDXProject2/MyDXProject2.vcxproj
+++ b/양정우(클라이언트)/DirectX12/MyDXProj/MyDXProject2/MyDXProject2.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MyDXProject2.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectMgr.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
@@ -148,6 +149,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MyDXProject2.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ObjectMgr.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Session.cpp" />
