--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
@@ -225,6 +225,7 @@
   <ItemGroup>
     <None Include="..\Resources\Shader\default.hlsli" />
     <None Include="..\Resources\Shader\params.hlsli" />
+    <None Include="..\Resources\Shader\Skybox.hlsli" />
     <None Include="..\Resources\Shader\utils.hlsli" />
     <None Include="SimpleMath.inl" />
   </ItemGroup>
