--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
@@ -220,5 +220,8 @@
     <None Include="..\Resources\Shader\utils.hlsli">
       <Filter>Shader</Filter>
     </None>
+    <None Include="..\Resources\Shader\Skybox.hlsli">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
