클라에 boost/asio 추가 미완

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,6 @@ FodyWeavers.xsd
 김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
 *.vsidx
 김동재(서버)/Asio server 연습/server/.vs/ASIO_GAME_SERVER/FileContentIndex/5ad407d5-299a-457e-b71c-c2faa56cdde2.vsidx
+양정우(클라이언트)/DirectX12/Game/Output/Engine.idb
+양정우(클라이언트)/DirectX12/Game/Output/Engine.lib
+양정우(클라이언트)/DirectX12/Game/Output/Engine.lib
