--- a/양정우(클라이언트)/DirectX12/Game/Client/Client.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/Game/Client/Client.vcxproj.filters
@@ -15,6 +15,9 @@
     <Filter Include="소스 파일\Game">
       <UniqueIdentifier>{d49e5cb7-a481-4511-8101-2b2904c324b5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Server">
+      <UniqueIdentifier>{1f93dfed-515a-47da-a77d-3474b5da12c7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -32,7 +35,9 @@
     <ClInclude Include="pch.h">
       <Filter>소스 파일\Utils</Filter>
     </ClInclude>
-    <ClInclude Include="session.h" />
+    <ClInclude Include="session.h">
+      <Filter>소스 파일\Server</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc">
@@ -58,10 +63,12 @@
       <Filter>소스 파일\Utils</Filter>
     </ClCompile>
     <ClCompile Include="session.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <Filter>소스 파일\Server</Filter>
+    </None>
   </ItemGroup>
 </Project>
