기반작업 2차 저장
Add compute shader, UI shader

--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
@@ -236,8 +236,10 @@
     <None Include="SimpleMath.inl" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="..\Resources\Shader\compute.hlsl" />
     <FxCompile Include="..\Resources\Shader\deferred.hlsl" />
     <FxCompile Include="..\Resources\Shader\forward.hlsl" />
+    <FxCompile Include="..\Resources\Shader\lighting.hlsl" />
     <FxCompile Include="..\Resources\Shader\params.hlsl" />
     <FxCompile Include="..\Resources\Shader\skybox.hlsl" />
     <FxCompile Include="..\Resources\Shader\utils.hlsl" />
