--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
@@ -234,5 +234,11 @@
     <FxCompile Include="..\Resources\Shader\deferred.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
+    <FxCompile Include="..\Resources\Shader\lighting.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="..\Resources\Shader\compute.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
