Binary 모델을 로드하기위한 기반작업

--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="MeshData.cpp">
       <Filter>Object\Resource</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryLoader.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -268,6 +271,9 @@
     </ClInclude>
     <ClInclude Include="MeshData.h">
       <Filter>Object\Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryLoader.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
