--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshData.h" />
     <ClInclude Include="MeshRenderer.h" />
+    <ClInclude Include="BinaryLoader.h" />
     <ClInclude Include="MonoBehaviour.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ParticleSystem.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshData.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
+    <ClCompile Include="BinaryLoader.cpp" />
     <ClCompile Include="MonoBehaviour.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
