--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj
@@ -163,6 +163,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animator.h" />
     <ClInclude Include="BaseCollider.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CommandQueue.h" />
@@ -201,11 +202,13 @@
     <ClInclude Include="TableDescriptorHeap.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="TestCameraScript.h" />
+    <ClInclude Include="TestDragon.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BaseCollider.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CommandQueue.cpp" />
@@ -248,6 +251,7 @@
     <ClCompile Include="TableDescriptorHeap.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TestCameraScript.cpp" />
+    <ClCompile Include="TestDragon.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
@@ -256,10 +260,12 @@
     <None Include="SimpleMath.inl" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="..\Resources\Shader\animation.hlsl" />
     <FxCompile Include="..\Resources\Shader\compute.hlsl" />
     <FxCompile Include="..\Resources\Shader\deferred.hlsl" />
     <FxCompile Include="..\Resources\Shader\forward.hlsl" />
     <FxCompile Include="..\Resources\Shader\lighting.hlsl" />
+    <FxCompile Include="..\Resources\Shader\math.hlsl" />
     <FxCompile Include="..\Resources\Shader\params.hlsl" />
     <FxCompile Include="..\Resources\Shader\particle.hlsl" />
     <FxCompile Include="..\Resources\Shader\shadow.hlsl" />
