--- a/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
+++ b/양정우(클라이언트)/DirectX12/Game/Engine/Engine.vcxproj.filters
@@ -159,7 +159,7 @@
     <ClCompile Include="Animator.cpp">
       <Filter>Object\Component</Filter>
     </ClCompile>
-    <ClCompile Include="..\Client\session.cpp">
+    <ClCompile Include="session.cpp">
       <Filter>Server</Filter>
     </ClCompile>
   </ItemGroup>
@@ -293,7 +293,7 @@
     <ClInclude Include="Animator.h">
       <Filter>Object\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Client\session.h">
+    <ClInclude Include="session.h">
       <Filter>Server</Filter>
     </ClInclude>
   </ItemGroup>
@@ -301,10 +301,9 @@
     <None Include="SimpleMath.inl">
       <Filter>Utils</Filter>
     </None>
-    <None Include="..\Client\packages.config">
+    <None Include="packages.config">
       <Filter>Server</Filter>
     </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Resources\Shader\forward.hlsl">
